// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`secondary button test 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  height: 2.5rem;
  padding: 0 0.75rem;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
  font-weight: 600;
  background-color: #1B51A0;
  border: 0.0625rem solid #1B51A0;
  color: #FFFFFF;
  cursor: pointer;
  outline: none;
  margin: 0.25rem 0;
  background: #FFFFFF;
  color: #1B51A0;
  border-color: #1B51A0;
}

.c0 img {
  max-height: 1.125rem;
  max-width: 1.125rem;
  margin-right: 0.25rem;
}

.c0:hover {
  background-color: #143b74;
}

.c0:disabled {
  background-color: #b4b4b4;
  border-color: #b4b4b4;
  color: #686868;
  cursor: default;
}

.c0:hover {
  background-color: #c5d8f5;
}

<button
  className="c0"
/>
`;

exports[`simple button test 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  height: 2.5rem;
  padding: 0 0.75rem;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
  font-weight: 600;
  background-color: #1B51A0;
  border: 0.0625rem solid #1B51A0;
  color: #FFFFFF;
  cursor: pointer;
  outline: none;
  margin: 0.25rem 0;
}

.c0 img {
  max-height: 1.125rem;
  max-width: 1.125rem;
  margin-right: 0.25rem;
}

.c0:hover {
  background-color: #143b74;
}

.c0:disabled {
  background-color: #b4b4b4;
  border-color: #b4b4b4;
  color: #686868;
  cursor: default;
}

<button
  className="c0"
/>
`;

exports[`upload button test 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  height: 2.5rem;
  padding: 0 0.75rem;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
  font-weight: 600;
  background-color: #1B51A0;
  border: 0.0625rem solid #1B51A0;
  color: #FFFFFF;
  cursor: pointer;
  outline: none;
  margin: 0.25rem 0;
  height: 2rem;
  position: relative;
}

.c0 img {
  max-height: 1.125rem;
  max-width: 1.125rem;
  margin-right: 0.25rem;
}

.c0:hover {
  background-color: #143b74;
}

.c0:disabled {
  background-color: #b4b4b4;
  border-color: #b4b4b4;
  color: #686868;
  cursor: default;
}

.c0 input {
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  opacity: 0;
}

<button
  className="c0"
/>
`;
